--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="Question3">"How old is the\u00A0Universe?"</string>
     <string name="Question4">"What is the\u00A0name of\u00A0the\u00A0natural satelite of\u00A0the\u00A0Earth?"</string>
 
-    <string name="H1">"You can choose more than one answer"</string>
+    <string name="H1">"You can choose more than one answer."</string>
     <string name="A11">"galactose"</string>
     <string name="A12">"fructose"</string>
     <string name="A13">"surcrose"</string>
@@ -33,4 +33,6 @@
     <string name="A42">"Moon"</string>
     <string name="A4r">"the Moon"</string>
 
+    <string name="scrollup_P">"NEXT QUESTION"</string>
+    <string name="scrollup_L">"SCROLL UP OR PRESS THE BUTTON FOR THE NEXT QUESTION"</string>
 </resources>
