--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,11 @@
     <string name="Q3">"Question #3"</string>
     <string name="Q4">"Question #4"</string>
 
-    <string name="Question1">"Which of\u00A0the\u00A0substances listed above are\u00A0carbohydrates?"</string>
-    <string name="Question2">"What is the\u00A0biggest object in\u00A0our Solar System?"</string>
-    <string name="Question3">"How old is the\u00A0Universe?"</string>
-    <string name="Question4">"What is the\u00A0name of\u00A0the\u00A0natural satelite of\u00A0the\u00A0Earth?"</string>
+    <string name="question_text1_P">"Which of\u00A0the\u00A0substances listed above are\u00A0carbohydrates?"</string>
+    <string name="question_text1_L">"Which of\u00A0the\u00A0substances are\u00A0carbohydrates?"</string>
+    <string name="question_text2">"What is the\u00A0biggest object in\u00A0our Solar System?"</string>
+    <string name="question_text3">"How old is the\u00A0Universe?"</string>
+    <string name="question_text4">"What is the\u00A0name of\u00A0the\u00A0natural satellite of\u00A0the\u00A0Earth?"</string>
 
     <string name="H1">"You can choose more than one answer."</string>
     <string name="A11">"galactose"</string>
@@ -25,7 +26,8 @@
 
     <string name="A31">"15 billions"</string>
     <string name="A32">"13 billions"</string>
-    <string name="A33">"130 billions"</string>
+    <string name="A33">"137 billions"</string>
+    <string name="A34">"13 millions"</string>
     <string name="A3r">"13 billions (Answer #2)"</string>
 
     <string name="H4">"Please type here the answer"</string>
@@ -33,7 +35,6 @@
     <string name="A42">"Moon"</string>
     <string name="A4r">"the Moon"</string>
 
-    <string name="scrollup_P1">"NEXT QUESTION"</string>
-    <string name="scrollup_P">"SUBMIT THE ANSWER"</string>
-    <string name="scrollup_L">"SUBMIT THE ANSWER FOR THE NEXT QUESTION"</string>
+    <string name="button_text_P">"SUBMIT THE ANSWER"</string>
+    <string name="button_text_L">"READY FOR NEXT QUESTION?  PRESS TO SUBMIT THE ANSWER"</string>
 </resources>
