--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="A34">"13 millions"</string>
     <string name="A3r">"13 billions (Answer #2)"</string>
 
-    <string name="H4">"Please type here the answer"</string>
+    <string name="H4">"Please type the answer..."</string>
     <string name="A41">"the Moon"</string>
     <string name="A42">"Moon"</string>
     <string name="A4r">"the Moon"</string>
