--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,10 +29,10 @@
     <string name="A14">"maltose"</string>
     <string name="A1r">"All substances are carbohydrates."</string>
 
-    <string name="A2">"THE SUN"</string>
-    <string name="A21">"the Sun"</string>
-    <string name="A22">"Sun"</string>
+    <string name="A21">"THE SUN"</string>
+    <string name="A22">"SUN"</string>
     <string name="A2r">"the Sun"</string>
+    <string name="A2">"THE SUN"</string>
 
     <string name="A31">"15 billions"</string>
     <string name="A32">"13 billions"</string>
@@ -40,10 +40,10 @@
     <string name="A34">"13 millions"</string>
     <string name="A3r">"13 billions (Answer #2)"</string>
 
-    <string name="A4">"THE MOON"</string>
-    <string name="A41">"the Moon"</string>
-    <string name="A42">"Moon"</string>
+    <string name="A41">"THE MOON"</string>
+    <string name="A42">MOON"</string>
     <string name="A4r">"the Moon"</string>
+    <string name="A4">"THE MOON"</string>
 
     <string name="button_text_blocked_P">"SCROLL UP"</string>
     <string name="button_text_blocked_L">"PLEASE SCROLL UP TO THE NEXT QUESTION"</string>
