--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Quiz App</string>
 
+    <string name="QA">"YOUR SCORES"</string>
     <string name="Q0">"Welcome!   "</string>
     <string name="Q1">"Question #1"</string>
     <string name="Q2">"Question #2"</string>
@@ -17,10 +18,16 @@
     <string name="H1">"You can choose more than one answer."</string>
     <string name="H2">"Please type the answer"</string>
 
-    <string name="A01">"A01"</string>
-    <string name="A02">"A02"</string>
-    <string name="A03">"A03"</string>
-    <string name="A04">"A04"</string>
+    <string name="AA1">"Question #1"</string>
+    <string name="AA2">"Question #2"</string>
+    <string name="AA3">"Question #3"</string>
+    <string name="AA4">"Question #4"</string>
+    <string name="AAT">"TOTAL"</string>
+    <string name="SA1">"SA1"</string>
+    <string name="SA2">"SA2"</string>
+    <string name="SA3">"SA3"</string>
+    <string name="SA4">"SA4"</string>
+    <string name="SAT">"SAT"</string>
     <string name="answer_text0">"answer_text0"</string>
 
     <string name="A11">"galactose"</string>
@@ -45,12 +52,14 @@
     <string name="A4r">"the Moon"</string>
     <string name="A4">"THE MOON"</string>
 
-    <string name="button_text_blocked_P">"SCROLL UP"</string>
-    <string name="button_text_blocked_L">"PLEASE SCROLL UP TO THE NEXT QUESTION"</string>
+    <string name="button_text_disabled_P">"SCROLL UP"</string>
+    <string name="button_text_disabled_L">"PLEASE SCROLL UP TO THE NEXT QUESTION"</string>
     <string name="button_text_active_P">"SUBMIT THE ANSWER"</string>
     <string name="button_text_active_L">"READY FOR THE NEXT QUESTION? PRESS TO SUBMIT THE ANSWER"</string>
     <string name="button_text_lastq_P">"SUBMIT THE LAST ANSWER"</string>
-    <string name="button_text_lastq_L">"READY TO SEE THE RESULTS? SUBMIT THE LAST ANSWER"</string>
+    <string name="button_text_lastq_L">"READY TO SEE THE RESULTS?  SUBMIT THE LAST ANSWER"</string>
     <string name="button_text_end_P">"SCROLL DOWN"</string>
     <string name="button_text_end_L">"PLEASE SCROLL DOWN TO SEE THE RESULTS"</string>
+    <string name="button_text_exit_P">"EXIT"</string>
+    <string name="button_text_exit_L">"EXIT QUIZ APPLICATION"</string>
 </resources>
