--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="A32">"13 billions"</string>
     <string name="A33">"137 billions"</string>
     <string name="A34">"13 millions"</string>
-    <string name="A3r">"13 billions (Answer #2)"</string>
+    <string name="A3r">"13 billions"</string>
 
     <string name="A41">"THE MOON"</string>
     <string name="A42">MOON"</string>
